@@ -5,11 +5,11 @@
  * This file includes proto type of string apis
  *
  * @author	JoungKyun.Kim <http://oops.org>
- * $Date: 2011-03-29 10:08:14 $
- * $Revision: 1.29.2.1 $
+ * $Date: 2011-03-29 11:06:01 $
+ * $Revision: 1.29.2.2 $
  * @attention	Copyright (c) 2011 JoungKyun.Kim all rights reserved.
  */
-/* $Id: libstring.h,v 1.29.2.1 2011-03-29 10:08:14 oops Exp $ */
+/* $Id: libstring.h,v 1.29.2.2 2011-03-29 11:06:01 oops Exp $ */
 #ifndef LIBSTRING_H
 #define LIBSTRING_H
 
@@ -68,7 +68,7 @@ Long64 bin2long (CChar * src);
 UInt long2bin (Long64 dec, char ** dst);
 UInt dec2bin (CChar * src, char ** dst);
 
-bool is_ksc5601 (UInt c1, UInt c2);
+bool is_ksc5601 (int c1, int c2);
 bool is_utf8 (UCChar * src);
 char * charset_conv (CChar * src, CChar * from, CChar * to);
 #endif
