@@ -8,14 +8,14 @@ int main (void) {
 
 	oc_test_banner ("addslashes");
 
-	buf = addslashes (src, false);
-	printf ("%s\n", strcmp (buf, dst) ? "failed" : "ok");
+	buf = (unsigned char *) addslashes (src, false);
+	printf ("%s\n", strcmp ((char *) buf, dst) ? "failed" : "ok");
 	ofree (buf);
 
 	{
 		size_t buflen;
 		oc_test_banner ("addslashes_r");
-		if ( addslashes_r (src, strlen (src), &buf, &buflen) == false ) {
+		if ( addslashes_r ((unsigned char *) src, strlen (src), &buf, &buflen) == false ) {
 			printf ("failed\n");
 			return 0;
 		}
@@ -25,7 +25,7 @@ int main (void) {
 			return 0;
 		}
 
-		printf ("%s\n", strcmp (buf, dst) ? "failed" : "ok");
+		printf ("%s\n", strcmp ((char *) buf, dst) ? "failed" : "ok");
 		ofree (buf);
 	}
 
