@@ -3,8 +3,8 @@
 #include "test.h"
 
 int main (int argc, char ** argv) {
-	UChar domain[32] = { 0, };
-	UChar * punyc  = "xn---az-eb9lt87c3t8a66a.kr";
+	char domain[32] = { 0, };
+	char * punyc  = "xn---az-eb9lt87c3t8a66a.kr";
 
 	UChar * puny, * unpuny;
 	UInt l;
@@ -20,14 +20,14 @@ int main (int argc, char ** argv) {
 	stringprep_locale_charset_cache = "EUC-KR";
 
 	oc_test_banner ("convert_punycode encode");
-	puny = strdup (convert_punycode(domain, 0, 1));
-	printf ("%s\n", strcmp (puny, punyc) ? "failed" : "ok");
+	puny = (UChar *) strdup (convert_punycode(domain, 0, 1));
+	printf ("%s\n", strcmp ((char *) puny, punyc) ? "failed" : "ok");
 
 	stringprep_locale_charset_cache = "EUC-KR";
 
 	oc_test_banner ("convert_punycode decode");
-	unpuny = strdup (convert_punycode (punyc, 1, 1));
-	printf ("%s\n", strcmp (domain, unpuny) ? "failed" : "ok");
+	unpuny = (UChar *) strdup (convert_punycode (punyc, 1, 1));
+	printf ("%s\n", strcmp (domain, (char *) unpuny) ? "failed" : "ok");
 
 	free (puny);
 	free (unpuny);
@@ -40,14 +40,14 @@ int main (int argc, char ** argv) {
 	if ( l == 0 || puny == null )
 		printf ("failed - mem allocate\n");
 	else
-		printf ("%s\n", strcmp (puny, punyc) ? "failed" : "ok");
+		printf ("%s\n", strcmp ((char *) puny, punyc) ? "failed" : "ok");
 
 	oc_test_banner ("convert_punycode_r decode");
-	l = convert_punycode_r (puny, &unpuny, true, "EUC-KR");
+	l = convert_punycode_r ((CChar *) puny, &unpuny, true, "EUC-KR");
 	if ( l == 0 || unpuny == null )
 		printf ("failed - mem allocate\n");
 	else
-		printf ("%s\n", strcmp (domain, unpuny) ? "failed" : "ok");
+		printf ("%s\n", strcmp (domain, (char *) unpuny) ? "failed" : "ok");
 
 	free (unpuny);
 	free (puny);
